--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width-device-width, initial-scale-1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,600;1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css/style.css">
 </head>
 
@@ -37,32 +40,36 @@
         </div>
         <div class="col-4">
             <div class="dire">
-                <a href="https://www.google.ch/maps/place/Rue+du+Lac+22,+1800+Vevey,+Suiza/@46.4590463,6.8429694,17z/data=!3m1!4b1!4m5!3m4!1s0x478e9cce36eda3eb:0xb6dbe983200761a2!8m2!3d46.4590463!4d6.8451581"><p>Atelier: Rue du lac 22, 
+                <a href="https://www.google.ch/maps/place/Rue+du+Lac+22,+1800+Vevey,+Suiza/@46.4590463,6.8429694,17z/data=!3m1!4b1!4m5!3m4!1s0x478e9cce36eda3eb:0xb6dbe983200761a2!8m2!3d46.4590463!4d6.8451581">
+                    <p>Atelier:
+                        <p>Rue du lac 22,</p>
                     <p>1800 Vevey</p></a>
             </div>
         </div>
         <div class="col-4">
             <div class="dire">
-                <a href="https://www.google.ch/maps/place/Rue+de+Vuippens+46,+1630+Bulle,+Suiza/@46.6259289,7.0594519,17z/data=!3m1!4b1!4m5!3m4!1s0x478e6260bef454b7:0x1dc3b3033f79ec2c!8m2!3d46.6259289!4d7.0616406">
-                <p>Administration: Rue de Vuippens 46, 
-                    <p>1630 Bulle </p></a>
+                <p>Administration: 
+                    <p>Rue de Vuippens 46,</p>
+                    <p>1630 Bulle </p>
             </div>
         </div>
 
 <!--MAPA-->
-            <div class="d-flex justify-content-center">
-                <img src="img/Maps B&N vevey_1-2000.jpg"alt="mapa">
-            </div>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-6">
-            <div class="p-4">
-                <p>+41 (0)79 730 71 73</p>
-                <p>info@lucienberset.ch</p>
-            </div>
+        <div class="d-flex justify-content-center">
+            <img src="img/Maps B&N vevey_1-2000.png" alt="">
         </div>
     </div>
 </div>
+            
+<div class="container-fluid">
+    <div class="row">
+            <div class="p-4">
+                <a href="tel:+41 79 730 71 73" style="color: black;"><p>+41 79 730 72 73</p></a>
+                <p>info@lucienberset.ch</p>
+            </div>
+    </div>
 </div>
 
 <!--iconos-->
@@ -81,7 +88,13 @@
     <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
         <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
       </svg>
-   </a>
+    </a>
+    <a href="doc/Lucien Berset.vcf">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
+            <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z"/>
+            <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z"/>
+          </svg>
+    </a>
     </body>
     </html>
       
