--- a/index.html
+++ b/index.html
@@ -16,12 +16,6 @@
 
     <body>
 
-<!--PORTADA-->
-
-<a href="index1.html" class="lucien" id="lucien">
-
-</a>
-
 <!--Vertical NAV-->
 
   <div class="vertical-nav" id="sidebar">
@@ -61,83 +55,138 @@
 </div>
 
     <!--PRESENTACION-->
-<div class="container d-flex justify-content-center" id="pres">
-  <img src="img/gree.jpg" style="width: 65%;" alt="imagen gris">
+<div class="container d-flex justify-content-center col-6" id="pres">
+  <!-- <img src="img/gree.jpg" style="width: 65%;" alt="imagen gris"> -->
+  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+      <div class="carousel-item active">
+          <img src="img/Carrusels/Portada/img1.jpg" class="d-block w-100" alt="img1">
+      </div>
+      <div class="carousel-item">
+        <img src="img/Carrusels/Portada/img2.jpg" class="d-block w-100" alt="img2">
+      </div>
+      <div class="carousel-item">
+        <img src="img/Carrusels/Portada/img3.jpg" class="d-block w-100" alt="img3">
+      </div>
+    </div>
 </div>
 
 <!--ACTUALITE-->
-<div class="container d-flex justify-content-center" id="actualite">
-  <div class="col-6">
-      <img src="img/gree.jpg" style="width: 95%;" alt="imgane gris">
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        <p>Tempora harum vitae, perferendis alias odio fuga quidem provident nam fugit voluptatibus inventore error excepturi doloribus deserunt! Amet nisi enim veritatis rem ex autem culpa non.</p>
-      
-  </div>
+<div class="container d-flex justify-content-center flex-column col-6" id="actualite">
+  <div class="border border-secondary">
+      <img src="img/Autres/Logo .jpg" style="width: 95%;" alt="imgane gris">
+    </div>
+    <p>noviembre 2021: publication du site web</p>
 </div>
 
 <!--PROFIL-->
 <div class="profil" id="profil">
     <div class="container d-flex justify-content-center">
-        <div class="col-8">
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo atque assumenda quia corrupti quaerat autem molestiae accusamus cupiditate temporibus, mollitia esse sint impedit, possimus saepe? Nemo fuga aperiam, temporibus ea explicabo mollitia quia odit consectetur. Harum provident sequi, quod enim vel soluta doloremque aliquid eius fugiat aliquam dolor veritatis iure ad neque earum blanditiis exercitationem consequuntur nulla eveniet nobis quasi?</p>
+        <div class="col-12 col-xl-9">
+          <h5 class="font-italic">« Une architecture à la mesure de l'humain »</h5>
+          <br>
+          <br>
+          <h3>Lucien Bercet</h3>
+          <p>Architecte MA-HES, Reg. A, SIA</p>
+          <p>Architecte d'intérieure BA-HES</p>
+          <br>
+          <br>
+           <table class="table table-borderless">
+              <tbody>
+                <tr>
+                  <th scope="row">2020</th>
+                  <td>Fondation Lucien Berset architectes, Vevey - Bulle</td>
+                </tr>
+                <tr>
+                  <th scope="row">2020</th>
+                  <td>Membre de la Fondation des Registres suisses des professionnels de l'ingénierie, de l'architecture et de l'environnement (REG.A)</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="w-25">2019 - 2020</th>
+                  <td>Voyage initiatique en Amérique latine</td>
+                </tr>
+                <tr>
+                  <th scope="row" class="w-25">2019</th>
+                  <td>Membre de la Société suisse des ingénieurs et architectes (SIA)</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2015 - 2019</th>
+                  <td>Architecte chez 2BO Architecture, Villars-sur-Glàne</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2012 - 2014</th>
+                  <td>Master of Arts HES en Architecture, Heia-fr, Fribourg</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2013</th>
+                  <td>Summerschool, Patt institute, New York</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2011 - 2012</th>
+                  <td>Bachelor of Arts HES en Architecture, passerelle HEPIA, Genève</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2010 - 2012</th>
+                  <td>Architecte d'intérieure chez NOMOS Architects, Genève</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2007 - 2010</th>
+                  <td>Bachelor of Arts HES-SO en Architecture d'intérieure, HEAD, Genève</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2006 - 2007</th>
+                  <td>Année préparatoire en Architecture d'intérieure, EEA, Genève</td>
+                </tr>
+                 <tr>
+                  <th scope="row" class="w-25">2000 - 2004</th>
+                  <td>Certificant de Maturité gymnasiale, Collège St-Michel, Fribourg</td>
+                </tr>
+              </tbody>
+            </table>
         </div>
     </div>
 </div>
 
 <!--PROJETS-->
 <div class="projets" id="projets">
-  <div class="d-flex justify-content-center p-3">
-    <img src="img/gree.jpg" style="width: 50%;" alt="mapa">
+  <div class="container d-flex justify-content-center col-6">
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+      <div class="carousel-item active">
+          <img src="img/Carrusels/Projets/img1.jpg" class="d-block w-100" alt="img1">
+      </div>
+      <div class="carousel-item">
+        <img src="img/Carrusels/Projets/img2.jpg" class="d-block w-100" alt="img2">
+      </div>
+      <div class="carousel-item">
+        <img src="img/Carrusels/Projets/img3.jpg" class="d-block w-100" alt="img3">
+      </div>
+    </div>
   </div>
-  <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 </div>
 
 <!--EN COURSE-->
 <div class="cours" id="curso">
-  <div class="d-flex justify-content-center">
-    <img src="img/gree.jpg" style="width: 50%;" alt="Pantalla gris">
+  <div class="d-flex justify-content-center align-items-end">
+    <img src="img/En cours/Miniaturas/img.jpg" style="width: 25%;" alt="Pantalla gris">
+    <a href="in-progress.html">Transformation intérieure et construction d'une terrasse surélevée.
+      Rossens (FR). 2021
+    </a>
   </div>
-  <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-</div>
-
-<div class="cours" id="cuors">
-  <div class="d-flex justify-content-center">
-    <img src="img/gree.jpg" style="width: 50%;" alt="Pantalla gris">
-  </div>
-  <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-</div>
-
-<div class="cours" id="cuors">
-  <div class="d-flex justify-content-center">
-    <img src="img/gree.jpg" style="width: 50%;" alt="Pantalla gris">
-  </div>
-  <p class="text-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 </div>
 
 <!--RÉALISÉ-->
 
 <div class="realis" id="realis">
-  <div class="d-flex justify-content-center">
-    <img src="img/gree.jpg" style="width: 50%;" alt="Pantalla gris">
+  <div class="d-flex justify-content-center align-items-end">
+    <img src="img/Réalisé/Miniaturas/img1.jpg" style="width: 25%;" alt="Pantalla gris">
+    <a href="mansion-work.html">Transformation d'une maison villageoise, Romanens (FR), 2020-21</a>
   </div>
-  <p class="text-center">RÉALISÉ</p>
-</div>
-
-<div class="realis" id="realis">
-  <div class="d-flex justify-content-center">
-    <img src="img/gree.jpg"  style="width: 50%;"alt="Pantalla gris">
+  <br> 
+  <br> 
+  <div class="d-flex justify-content-center align-items-end">
+    <img src="img/Réalisé/Miniaturas/img2.jpg" style="width: 25%;" alt="Pantalla gris">
+    <a href="pool-work.html">construction d'une piscine, Treyvaux (FR), 2020</a>
   </div>
-  <p class="text-center">RÉALISÉ</p>
 </div>
-
-<div class="realis" id="realis">
-  <div class="d-flex justify-content-center">
-    <img src="img/gree.jpg"style="width: 50%;" alt="Pantalla gris">
-  </div>
-  <p class="text-center">RÉALISÉ</p>
-</div>
-
-
 
 
 <!--CONTACT-->
@@ -203,7 +252,7 @@
       </div>
       <div class="col-3">
         <div class="iconos">
-          <a href="">
+          <a href="img/Autres/Lucien Berset V-card 2021.vcf">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-card-image" viewBox="0 0 16 16">
               <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
               <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
