--- a/in-progress.html
+++ b/in-progress.html
@@ -49,68 +49,174 @@
     <br />
     <br />
     <br />
+    <div class="container d-flex justify-content-center col-6">
+      <h4>
+        Transformation intérieure et construction d'une terrasse surélevée,
+        Rossens (FR), 2021
+      </h4>
+    </div>
+    <br />
+    <div class="container d-flex justify-content-center col-6 paragraph">
+      <p>
+        Des petits espaces distribués par un couloir étroit, un manque de
+        lumière et un petit balcon, tels étaient les caractéristiques de cette
+        villa des années 70. Le projet se compose de plusieurs interventions
+        successives qui une fois terminées offre des espaces généreux, lumineux
+        et ouverts vers l’extérieur.. Un mur porteur a tout d’abord été supprimé
+        et remplacé par une poutrelle et un poteau métalliques afin de créer un
+        seul et grand espace. Une large ouverture a été créée sur la façade
+        sud-ouest. Enfin le balcon étroit et peu fonctionnel a été remplacé par
+        une vaste terrasse qui s’étend vers les champs alentours. Son système
+        constructif mixte, en bois et métal lui garantit une bonne longévité
+        malgré son exposition aux intempéries. A l’intérieur la cuisine a été
+        refaite à neuf et du mobilier sur mesure complète l’aménagement du
+        salon. L’ensemble se veut sobre et harmonieux avec des teintes de noir,
+        de blanc et de gris et une touche de couleur que l’on retrouve sur la
+        peinture des éléments métalliques et les faïences. Les clients peuvent
+        ainsi laisser libre court à leur imagination pour l’aménagement et la
+        décoration des leurs espaces de vie..
+      </p>
+    </div>
+    <br />
+    <br />
+    <br />
     <div class="container d-flex justify-content-center col-6 images-list">
       <ul>
         <li>
-          <img src="img/En cours/Rossens/img1.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img1.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img2.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img2.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img3.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img3.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img4.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img4.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img5.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img5.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img6.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img6.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img7.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img7.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img8.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img8.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img9.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img9.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img10.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img10.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img11.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img11.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img12.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img12.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img13.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img13.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img14.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img14.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/En cours/Rossens/img15.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/En cours/Rossens/img15.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
       </ul>
     </div>
     <script
