--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
 
     <!--PRESENTACION-->
 <div class="container d-flex justify-content-center col-6" id="pres">
-  <!-- <img src="img/gree.jpg" style="width: 65%;" alt="imagen gris"> -->
   <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-item active">
           <img src="img/Carrusels/Portada/img1.jpg" class="d-block w-100" alt="img1">
@@ -166,7 +165,7 @@
 <!--EN COURSE-->
 <div class="cours" id="curso">
   <div class="d-flex justify-content-center align-items-end">
-    <img src="img/En cours/Miniaturas/img.jpg" style="width: 25%;" alt="Pantalla gris">
+    <img src="img/En cours/Miniaturas/img.jpg" loading="lazy" style="width: 25%;" alt="Pantalla gris">
     <a href="in-progress.html">Transformation intérieure et construction d'une terrasse surélevée.
       Rossens (FR). 2021
     </a>
@@ -177,13 +176,13 @@
 
 <div class="realis" id="realis">
   <div class="d-flex justify-content-center align-items-end">
-    <img src="img/Réalisé/Miniaturas/img1.jpg" style="width: 25%;" alt="Pantalla gris">
+    <img src="img/Réalisé/Miniaturas/img1.jpg" loading="lazy" style="width: 25%;" alt="Pantalla gris">
     <a href="mansion-work.html">Transformation d'une maison villageoise, Romanens (FR), 2020-21</a>
   </div>
   <br> 
   <br> 
   <div class="d-flex justify-content-center align-items-end">
-    <img src="img/Réalisé/Miniaturas/img2.jpg" style="width: 25%;" alt="Pantalla gris">
+    <img src="img/Réalisé/Miniaturas/img2.jpg" loading="lazy" style="width: 25%;" alt="Pantalla gris">
     <a href="pool-work.html">construction d'une piscine, Treyvaux (FR), 2020</a>
   </div>
 </div>
