--- a/mansion-work.html
+++ b/mansion-work.html
@@ -44,54 +44,137 @@
         </ul>
       </div>
     </div>
-      <br />
+    <br />
+    <br />
+    <br />
+    <div class="container d-flex justify-content-center col-6">
+      <h4>Transformation d'une maison villageoise, Romanens (FR), 2020-21</h4>
+    </div>
+    <br />
+    <div class="container d-flex justify-content-center col-6 paragraph">
+      <p>
+        Située dans un environnement rural et agricole typique de la Gruyère, la
+        maison a connu plusieurs transformations et agrandissements au cours de
+        son existence. Deux systèmes constructifs s’y rencontrent. La partie la
+        plus ancienne est constituée d’un système de poteaux et de poutres en
+        bois alors que la partie la plus récente est faite de murs en maçonnerie
+        et de dalles en béton. Lors de la première visite d’une lieu, la
+        générosité du volume extérieur contrastait avec l’étroitesse des espaces
+        intérieurs. Les circulations étaient étriquées et les plafonds bas.
+        L’enjeu du projet a donc été de révéler ce sentiment d’espace propre au
+        lieu en supprimant le plancher de la partie la plus ancienne. La cuisine
+        et la salle à manger, aux rez, bénéficient alors d’une double hauteur,
+        alors que le salon, bien que directement connecté est rendu plus intime
+        par son plafond dont la hauteur est standard. Les ouvertures existantes,
+        petites et nombreuses, ont été maintenues afin de préserver le caractère
+        de ce type de construction et de laisser un maximum de lumière naturelle
+        pénétrer à l’intérieur. Des ouvertures aux proportions plus importantes
+        ont été créées sur la façade pignon et offrent de la profondeur aux
+        espaces intérieurs. Les combles ont été aménagées pour profiter de la
+        totalité du volume existant. Un escalier central en chêne massif dessert
+        alors les trois niveaux habitables. Enfin un système de claies a été mis
+        en oeuvre afin de filtrer les perspectives entre les différents espaces
+        et étages.
+      </p>
+    </div>
+    <br />
     <br />
     <br />
     <div class="container d-flex justify-content-center col-6 images-list">
       <ul>
         <li>
-          <img src="img/Réalisé/Romanens/img1.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img1.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img2.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img2.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img3.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img3.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img4.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img4.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img5.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img5.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img6.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img6.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img7.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img7.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img8.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img8.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img9.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img9.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Romanens/img10.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Romanens/img10.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
       </ul>
     </div>
-      <script
+    <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
