--- a/pool-work.html
+++ b/pool-work.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width-device-width, initial-scale-1.0" />
     <link
@@ -27,8 +27,8 @@
     />
     <link rel="stylesheet" href="style.css/pool-work.css" />
   </head>
-<body>
-      <div class="vertical-nav" id="sidebar">
+  <body>
+    <div class="vertical-nav" id="sidebar">
       <div class="flex">
         <div class="py-4 px-3 mb-4">
           <div class="media-body">
@@ -44,34 +44,84 @@
         </ul>
       </div>
     </div>
-        <br />
+    <br />
+    <br />
+    <br />
+    <div class="container d-flex justify-content-sgart col-6">
+      <h4>Construction d'une piscine, Treyvaux (FR), 2020</h4>
+    </div>
+    <br />
+    <div class="container d-flex justify-content-center col-6 paragraph">
+      <p>
+        Après avoir conçu sa villa lorsque j’étais employé du bureau 2BO, j’ai
+        été contacté par le client pour la réalisation de sa piscine extérieure.
+        Celle-ci fait partie intégrante du projet initial. Son emplacement et
+        ses dimensions étaient déjà pensées dès les premières esquisses de la
+        maison. Implantée dans le prolongement de la façade sud, elle est en
+        lien direct avec le salon. Ses teintes et ses reflets apportent ainsi un
+        air de vacances jusqu’à l’intérieur de la villa. Elle a été conçue comme
+        un miroir qui change d’aspect au fil de la journée et des saisons. Son
+        système de débordement sur quatre côtés l’intègre subtilement aux
+        aménagements extérieurs et prolonge la perspective sur la campagne
+        environnante. L’ouvrage entièrement réalisé en acier inox par
+        l’entreprise Madinoxial semble avoir toujours existé et promet
+        d’agréables moments de détente à ces usagers et ce pour de longues
+        années.
+      </p>
+    </div>
+    <br />
     <br />
     <br />
     <div class="container d-flex justify-content-center col-6 images-list">
       <ul>
         <li>
-          <img src="img/Réalisé/Treyvaux/img1.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Treyvaux/img1.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Treyvaux/img2.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Treyvaux/img2.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Treyvaux/img3.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Treyvaux/img3.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Treyvaux/img4.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Treyvaux/img4.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
         <li>
-          <img src="img/Réalisé/Treyvaux/img5.jpg" loading="lazy" alt="img" class="w-100" />
+          <img
+            src="img/Réalisé/Treyvaux/img5.jpg"
+            loading="lazy"
+            alt="img"
+            class="w-100"
+          />
         </li>
-        <br>
+        <br />
       </ul>
     </div>
-      <script
+    <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
       crossorigin="anonymous"
@@ -86,5 +136,5 @@
       integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
       crossorigin="anonymous"
     ></script>
-</body>
+  </body>
 </html>
