--- a/in-progress.html
+++ b/in-progress.html
@@ -34,7 +34,7 @@
       <div class="flex">
         <div class="py-4 px-3 mb-4">
           <div class="media-body">
-            <p class="mb-0">Lucien Berset <span> architecte</span></p>
+            <p id="init"  class="mb-0">Lucien Berset <span> architectes</span></p>
           </div>
         </div>
         <ul class="nav flex-column mb-0">
