--- a/index.html
+++ b/index.html
@@ -1,279 +1,54 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width-device-width, initial-scale-1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;500;600&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css/style.css">
-</head>
-
-    <body>
-
-<!--Vertical NAV-->
-
-  <div class="vertical-nav" id="sidebar">
-    <div class="flex">
-      <div class="py-4 px-3 mb-4">     
-        <div class="media-body">
-          <p class="mb-0">Lucien Berset <span> architecte</span></p>
-        </div>     
-      </div>
-      <ul class="nav flex-column mb-0">
-        <li class="nav-item">
-          <a href="#actualite" class="nav-link" style="color: black;">
-            Actualités
-          </a>
-        </li>
-        <li class="nav-item">
-          <a href="#profil" class="nav-link" style="color: black;">
-            Profil
-          </a>
-        </li>
-          <div class="Projets">
-            <a class="dropdown-toggle" href="#projest" role="button" id="dropdownMenuLink" data-toggle="dropdown"            aria-haspopup="true" aria-expanded="false">Projets</a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" href="#curso">En cuors</a>
-                <a class="dropdown-item" href="#realis">Réalisé</a>
-            </div>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a href="#contact" class="nav-link" style="color:black">
-            Contact
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="pie">
-      <a href="redesgris.html" class="p-1">
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-          <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-        </svg>
-      </a>
-      <a href="redesgris.html" class="p-1">
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-instagram" viewBox="0 0 16 16">
-          <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z"/>
-        </svg>
-      </a>
-        
-      <a href="redesgris.html" class="p-1">
-        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-          <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
-        </svg>
-      </a>
-     </div>
-  </div>
-</div>
-
-    <!--PRESENTACION-->
-<div class="container d-flex justify-content-center col-6" id="pres">
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-      <div class="carousel-item active">
-          <img src="img/Carrusels/Portada/img1.jpg" class="d-block w-100" alt="img1">
-      </div>
-      <div class="carousel-item">
-        <img src="img/Carrusels/Portada/img2.jpg" class="d-block w-100" alt="img2">
-      </div>
-      <div class="carousel-item">
-        <img src="img/Carrusels/Portada/img3.jpg" class="d-block w-100" alt="img3">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width-device-width, initial-scale-1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+      integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+      crossorigin="anonymous"
+    />
+    <!-- <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css/presentation.css" />
+    <script src="main/presentation.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <div class="portada">
+        <h2 class="tile">Lucien Berset <span>architectes</span></h2>
       </div>
     </div>
-</div>
 
-<!--ACTUALITE-->
-<div class="container d-flex justify-content-center flex-column col-6" id="actualite">
-  <div class="border border-secondary">
-      <img src="img/Autres/Logo .jpg" style="width: 95%;" alt="imgane gris">
-    </div>
-    <p>noviembre 2021: publication du site web</p>
-</div>
-
-<!--PROFIL-->
-<div class="profil" id="profil">
-    <div class="container d-flex justify-content-center">
-        <div class="col-12 col-xl-9">
-          <h5 class="font-italic">« Une architecture à la mesure de l'humain »</h5>
-          <br>
-          <br>
-          <h3>Lucien Bercet</h3>
-          <p>Architecte MA-HES, Reg. A, SIA</p>
-          <p>Architecte d'intérieure BA-HES</p>
-          <br>
-          <br>
-           <table class="table table-borderless">
-              <tbody>
-                <tr>
-                  <th scope="row">2020</th>
-                  <td>Fondation Lucien Berset architectes, Vevey - Bulle</td>
-                </tr>
-                <tr>
-                  <th scope="row">2020</th>
-                  <td>Membre de la Fondation des Registres suisses des professionnels de l'ingénierie, de l'architecture et de l'environnement (REG.A)</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="w-25">2019 - 2020</th>
-                  <td>Voyage initiatique en Amérique latine</td>
-                </tr>
-                <tr>
-                  <th scope="row" class="w-25">2019</th>
-                  <td>Membre de la Société suisse des ingénieurs et architectes (SIA)</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2015 - 2019</th>
-                  <td>Architecte chez 2BO Architecture, Villars-sur-Glàne</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2012 - 2014</th>
-                  <td>Master of Arts HES en Architecture, Heia-fr, Fribourg</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2013</th>
-                  <td>Summerschool, Patt institute, New York</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2011 - 2012</th>
-                  <td>Bachelor of Arts HES en Architecture, passerelle HEPIA, Genève</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2010 - 2012</th>
-                  <td>Architecte d'intérieure chez NOMOS Architects, Genève</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2007 - 2010</th>
-                  <td>Bachelor of Arts HES-SO en Architecture d'intérieure, HEAD, Genève</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2006 - 2007</th>
-                  <td>Année préparatoire en Architecture d'intérieure, EEA, Genève</td>
-                </tr>
-                 <tr>
-                  <th scope="row" class="w-25">2000 - 2004</th>
-                  <td>Certificant de Maturité gymnasiale, Collège St-Michel, Fribourg</td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-    </div>
-</div>
-
-<!--PROJETS-->
-<div class="projets" id="projets">
-  <div class="container d-flex justify-content-center col-6">
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-      <div class="carousel-item active">
-          <img src="img/Carrusels/Projets/img1.jpg" class="d-block w-100" alt="img1">
-      </div>
-      <div class="carousel-item">
-        <img src="img/Carrusels/Projets/img2.jpg" class="d-block w-100" alt="img2">
-      </div>
-      <div class="carousel-item">
-        <img src="img/Carrusels/Projets/img3.jpg" class="d-block w-100" alt="img3">
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--EN COURSE-->
-<div class="cours" id="curso">
-  <div class="d-flex justify-content-center align-items-end">
-    <img src="img/En cours/Miniaturas/img.jpg" loading="lazy" style="width: 25%;" alt="Pantalla gris">
-    <a href="in-progress.html">Transformation intérieure et construction d'une terrasse surélevée.
-      Rossens (FR). 2021
-    </a>
-  </div>
-</div>
-
-<!--RÉALISÉ-->
-
-<div class="realis" id="realis">
-  <div class="d-flex justify-content-center align-items-end">
-    <img src="img/Réalisé/Miniaturas/img1.jpg" loading="lazy" style="width: 25%;" alt="Pantalla gris">
-    <a href="mansion-work.html">Transformation d'une maison villageoise, Romanens (FR), 2020-21</a>
-  </div>
-  <br> 
-  <br> 
-  <div class="d-flex justify-content-center align-items-end">
-    <img src="img/Réalisé/Miniaturas/img2.jpg" loading="lazy" style="width: 25%;" alt="Pantalla gris">
-    <a href="pool-work.html">construction d'une piscine, Treyvaux (FR), 2020</a>
-  </div>
-</div>
-
-
-<!--CONTACT-->
-
-<div class="contact" id="contact">
-  <div class="container">
-    <div class="row">
-      <div class="col-6 d-flex justify-content-center">
-        <div class="ruta">
-          <a href=""><p>Atelier: 
-            <p>Rue du Lac </p>
-             <p class="margenb">22 1800 Vevey</p></a>
-        </div>
-      </div>
-      <div class="col-3-sm d-flex justify-content-center">
-        <div class="ruta">
-          <a href=""><p class="p-0">Administración:</p>
-          <p class="p-0">Rue de Vuippens 46</p>
-          <P>1630 Bulle</P></a>
-        </div>
-      </div>
-    </div>
-    <div class="d-flex justify-content-center">
-      <img src="img/Maps B&N vevey_1-2000.png" style="width: 62%;" alt="mapa">
-    </div>
-    <div class="col-6">
-      <div class="info">
-        <a href="tel:+41(0)79 730 71 73"><p class="text-center" id="center">+41 (0)79 730 71 73
-        </p></a>
-        <a href="mailto:info@lucienberset.ch"><p class="text-center">info@lucienberset.ch</p></a>
-      </div>
-    </div>
-</div>
-
-
-<!--PIE DE PAGINA-->
-<footer>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-3">
-        <div class="iconos">
-    
-        </div>
-      </div>
-      <div class="col-3">
-        <div class="iconos">
-          <a href="img/Autres/Lucien Berset V-card 2021.vcf">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-card-image" viewBox="0 0 16 16">
-              <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
-              <path d="M1.5 2A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13zm13 1a.5.5 0 0 1 .5.5v6l-3.775-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12v.54A.505.505 0 0 1 1 12.5v-9a.5.5 0 0 1 .5-.5h13z"/>
-            </svg>
-            <p class="d-inline">V-card</p>
-          </a>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</footer>
-
-
-
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-<script src="main/main.js"></script>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
-
-
-
