--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
       </ul>
     </div>
     <div class="pie">
-      <a href="redesgris.html" class="p-1">
+      <a href="redesgris.html" class="picon">
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
         </svg>
@@ -78,14 +78,14 @@
 <div class="contact" id="contact">
   <div class="container">
     <div class="row">
-      <div class="col-6 d-flex justify-content-center">
+      <div class="col-7 d-flex justify-content-center">
         <div class="ruta">
-          <a href=""><p>Atelier: 
+          <a href="https://www.google.com/maps/place/Rue+du+Lac+22,+1800+Vevey,+Suiza/@46.4590463,6.8429694,17z/data=!3m1!4b1!4m5!3m4!1s0x478e9cce36eda3eb:0xb6dbe983200761a2!8m2!3d46.4590463!4d6.8451581"><p>Atelier: 
             <p>Rue du Lac </p>
              <p class="margenb">22 1800 Vevey</p></a>
         </div>
       </div>
-      <div class="col-3-sm d-flex justify-content-center">
+      <div class="col-2-sm d-flex justify-content-center">
         <div class="ruta">
           <a href=""><p class="p-0">Administración:</p>
           <p class="p-0">Rue de Vuippens 46</p>
@@ -94,9 +94,9 @@
       </div>
     </div>
     <div class="d-flex justify-content-center">
-      <img src="img/Maps B&N vevey_1-2000.png" style="width: 62%;" alt="mapa">
+      <img src="img/Maps B&N vevey_1-2000.png" style="width: 52%;" alt="mapa">
     </div>
-    <div class="col-6">
+    <div class="col-7">
       <div class="info">
         <a href="tel:+41(0)79 730 71 73"><p class="text-center" id="center">+41 (0)79 730 71 73
         </p></a>
