--- a/actualites.html
+++ b/actualites.html
@@ -52,7 +52,7 @@
       </ul>
     </div>
     <div class="pie">
-      <a href="redesgris.html" class="p-1">
+      <a href="redesgris.html" class="picon">
         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
           <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
         </svg>
@@ -73,9 +73,9 @@
   <!--ACTUALITE-->
 <div class="container d-flex justify-content-center flex-column col-6" id="actualite">
   <div class="border border-secondary">
-      <img src="img/Autres/Logo .jpg" style="width: 95%;" alt="imgane gris">
+      <img src="img/Autres/Logo .jpg" style="width: 85%;" alt="imgane gris">
     </div>
-    <p>noviembre 2021: publication du site web</p>
+    <p>Noviembre 2021: publication du site web</p>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
